# iperf-andorid

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/soyx/iperf/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/iperf/lib/: CMakeLists.txt  SocketAddr.cpp  SocketAddr.hpp  Thread.cpp  Thread.hpp  config.h  gnu_getopt.c  gnu_getopt.h  gnu_getopt_long.c  headers.h  tcp_window_size.c
app/src/main/cpp/iperf/src/: Audience.cpp  Audience.hpp  CMakeLists.txt  Client.cpp  Client.hpp  List.cpp  List.h  Listener.cpp  Listener.hpp  Notify.cpp  Notify.hpp  PerfSocket.cpp  PerfSocket.hpp  PerfSocket_TCP.cpp  PerfSocket_UDP.cpp  Server.hpp  Settings.cpp  Settings.hpp  Speaker.hpp  main.cpp
app/src/main/java/com/example/soyx/iperf/: BandwidthThread.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/soyx/iperf/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
